Fixed FELIX-3482 Text wrapping goes out of bounds in Configuration Status https://issues.apache.org/jira/browse/FELIX-3482
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1329692 13f79535-47bb-0310-9956-ffa450edef68

--- a/webconsole/src/main/resources/res/ui/configurationrender.css
+++ b/webconsole/src/main/resources/res/ui/configurationrender.css
@@ -48,3 +48,4 @@
 
 #waitDlg { text-align: center; padding: 2em; font-weight: bold }
 #waitDlg img { margin-right: 1em }
+.ui-tabs-panel div {word-wrap:break-word}
